--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Ololo</h1>
-    <script data-main="js/app" src="js/lib/require-jquery.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/lib/jquery.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/app.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
